# serverless-ml-course

./: .gitignore  README.md  index.md  pyproject.toml
src/00-intro/: Feature-Store-Intro.ipynb
src/01-module/: iris-batch-inference-pipeline.ipynb  iris-feature-pipeline.ipynb  iris-train-pipeline.ipynb  iris_end_to_end_ml_pipeline.ipynb
src/01-module/iris_model/: iris_model.pkl
src/02-module/: 2_cc_feature_pipeline.ipynb
src/02-module/sml/: cc_features.py  synthetic_data.py
src/02-module/test_sml/: test_sml.py
