[tool.poetry]
name = "serverless-ml-course"
version = "0.1.0"
description = ""
authors = ["Shaurya Chanana <15051933+chanana@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "serverless_ml_course"}]

[tool.poetry.dependencies]
python = "~3.8"
jupyter = "^1.0.0"
ipython = "^8.5.0"
pandas = "^1.5.0"
jupyter-nbextensions-configurator = "^0.5.0"
black = "^22.8.0"
streamlit = "^1.13.0"
seaborn = "^0.12.0"
scikit-learn = "^1.1.2"
hopsworks = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
